<?xml version="1.0"?>
<package format="2">
  <name>bwi_lab_concert</name>
  <version>0.0.0</version>
  <description>
    Bringup files for the ROCON concert in the UTexas BWI lab.
  </description>

  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <author>Jack O'Quin</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>concert_master</exec_depend>

</package>
